A template added for some minimal UI

--- a/package.json
+++ b/package.json
@@ -29,10 +29,13 @@
     "axios": "^0.16.0",
     "babel-preset-stage-1": "^6.1.18",
     "lodash": "^3.10.1",
+    "marked": "^0.3.6",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
+    "react-marked": "^0.3.1",
     "react-redux": "^4.0.0",
     "react-router": "^2.0.1",
+    "react-text-truncate": "^0.8.3",
     "redux": "^3.0.4",
     "redux-promise": "^0.5.3"
   }
